:recycle: Address a few warnings